--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -31,6 +31,10 @@ Parameters:
     Type: String
   DevOpsCloudWatchAlarmsBusArn:
     Type: String
+  CloudTrailProjectionRegions:
+    Type: CommaDelimitedList
+  CloudTrailProjectionAccounts:
+    Type: CommaDelimitedList
 
 Resources:
   PipelineArtifactStore:
@@ -339,10 +343,15 @@ Resources:
                 ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
                 ChangeSetName: !Sub ${AWS::StackName}OrganizationCloudTrailStack
-                ParameterOverrides: !Sub |
-                  {
-                    "OrganizationId": "${OrganizationId}"
-                  }
+                ParameterOverrides: !Sub
+                  - >-
+                    {
+                      "OrganizationId": "${OrganizationId}",
+                      "ProjectionRegions": "${regions}",
+                      "ProjectionAccounts": "${accounts}"
+                    }
+                  - regions: !Join [",", !Ref CloudTrailProjectionRegions]
+                    accounts: !Join [",", !Ref CloudTrailProjectionAccounts]
                 RoleArn: !GetAtt OrganizationCloudTrailStackCloudFormationRole.Arn
                 StackName: organization-trail
                 TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-trail.yml
