Fix syntax error

--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -84,7 +84,7 @@ Resources:
               StringEquals:
                 aws:PrincipalOrgID: !Ref OrganizationId
               StringLike:
-                aws:PrincipalArn: arn:aws:iam::${!aws:PrincipalAccount}:role/service-role/AccessAnalyzerMonitorServiceRole*
+                aws:PrincipalArn: arn:aws:iam::${aws:PrincipalAccount}:role/service-role/AccessAnalyzerMonitorServiceRole*
         Version: "2012-10-17"
 
   CloudTrail:
