Need the DTR specific subdomain

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -123,6 +123,7 @@ Resources:
     Properties:
       DomainName: !If [IsProduction, dovetail.prxu.org, dovetail.staging.prxu.org]
       SubjectAlternativeNames:
+        - !If [IsProduction, dovetail-router.prxu.org, dovetail-router.staging.prxu.org]
         - !GetAtt Constants.VanityAlbDomain
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_dovetail_${Alb.LoadBalancerName}" }
