Filter noisy error messages

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -93,8 +93,8 @@ Resources:
             Statement:
               - Action: codestar-connections:*
                 Condition:
-                  "ForAllValues:StringEquals":
-                    "codestar-connections:PassedToService": codepipeline.amazonaws.com
+                  ForAllValues:StringEquals:
+                    codestar-connections:PassedToService: codepipeline.amazonaws.com
                 Effect: Allow
                 Resource: !Ref CodeStarConnectionArn
             Version: "2012-10-17"
