--- a/devops/aws-management/organization-trail.yml
+++ b/devops/aws-management/organization-trail.yml
@@ -218,4 +218,6 @@ Resources:
         FROM "${GlueDatabase}"."${CommonTrailTable}"
         WHERE "date" > date_format(current_date - interval '1' day, '%Y/%m/%d')
           AND errorCode <> ''
+          AND errorMessage <> 'No updates are to be performed.'
+          AND errorMessage <> 'The specified log group already exists'
         ORDER BY eventTime DESC
