--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -226,6 +226,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
