--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -52,6 +52,7 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
