Dovetail-router validation records

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -291,3 +291,15 @@ Resources:
             - _025d6c6bbdecb7604a31119313ada254.bbfvkzsszw.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+        # dovetail-router.prxu.org
+        - Name: !Sub _fe0afeac042e558f4bb5a16f746090ea.dovetail-router.${Domain}
+          ResourceRecords:
+            - _ca4b26b371b8474bfa7996732dac3a8b.xtsdcrbgyf.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # dovetail-router.staging.prxu.org
+        - Name: !Sub _13bb9f6900c6191e3567c0f6f4a27877.dovetail-router.staging.${Domain}
+          ResourceRecords:
+            - _2fdbae4e9cb7f56df7aae0f860e1109f.xtsdcrbgyf.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
