--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -1034,8 +1034,8 @@ Resources:
         {
           "widgets": [
             {
-              "height": 2,
-              "width": 24,
+              "height": 3,
+              "width": 12,
               "y": 0,
               "x": 0,
               "type": "text",
@@ -1046,12 +1046,12 @@ Resources:
             {
               "height": 6,
               "width": 12,
-              "y": 2,
+              "y": 3,
               "x": 0,
               "type": "metric",
               "properties": {
                 "metrics": [
-                  [ "AWS/ApplicationELB", "HTTPCode_Target_3XX_Count", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "3XX Count" } ]
+                  [ "AWS/ApplicationELB", "HTTPCode_Target_3XX_Count", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "3XX Redirects" } ]
                 ],
                 "view": "timeSeries",
                 "stacked": true,
@@ -1059,6 +1059,144 @@ Resources:
                 "stat": "Sum",
                 "period": 300,
                 "title": "HTTP Redirects"
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 0,
+              "x": 12,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "Target Group" } ],
+                  [ "AWS/ApplicationELB", "RequestCount", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "Load Balancer" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": false,
+                "region": "${AWS::Region}",
+                "stat": "Sum",
+                "period": 60,
+                "title": "Requests"
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 6,
+              "x": 12,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/ApplicationELB", "HTTPCode_Target_4XX_Count", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#bcbd22", "label": "4XX Errors" } ],
+                  [ "AWS/ApplicationELB", "HTTPCode_Target_5XX_Count", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#d62728", "label": "4XX Errors" } ],
+                  [ "${kMetricFilterNamespace}", "Errors${EnvironmentType}", { "label": "Logged Errors", "color": "#940026" } ],
+                  [ "${kMetricFilterNamespace}", "Warns${EnvironmentType}", { "label": "Logged Warnings", "color": "#ff7f0e" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": true,
+                "region": "${AWS::Region}",
+                "stat": "Sum",
+                "period": 300,
+                "title": "Errors"
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 9,
+              "x": 0,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#006400", "label": "Average", "stat": "Average" } ],
+                  [ "AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#2ca02c", "label": "p90", "stat": "p90" } ],
+                  [ "AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#98df8a", "label": "p95", "stat": "p95" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": false,
+                "region": "${AWS::Region}",
+                "stat": "p95",
+                "period": 300,
+                "yAxis": {
+                  "left": {
+                    "min": 0
+                  }
+                },
+                "title": "Response Times"
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 12,
+              "x": 12,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#ff9896", "label": "p99", "stat": "p99" } ],
+                  [ "AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "color": "#d62728", "label": "Maximum", "stat": "Maximum" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": false,
+                "region": "${AWS::Region}",
+                "stat": "Maximum",
+                "period": 300,
+                "yAxis": {
+                  "left": {
+                    "min": 0
+                  }
+                },
+                "title": "Slowest Responses"
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 15,
+              "x": 0,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "${kMetricFilterNamespace}", "Downloads${EnvironmentType}", { "label": "Downloads", "color": "#1f77b4" } ],
+                  [ "${kMetricFilterNamespace}", "Repressions${EnvironmentType}", { "label": "Repressions (digest-cache)", "color": "#ff7f0e" } ],
+                  [ "${kMetricFilterNamespace}", "Depressions${EnvironmentType}", { "label": "Depressions (non-listeners)", "color": "#2ca02c" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": true,
+                "region": "${AWS::Region}",
+                "stat": "Sum",
+                "period": 300,
+                "title": "Downloads",
+                "yAxis": {
+                  "left": {
+                    "showUnits": false
+                  }
+                }
+              }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 18,
+              "x": 12,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "${kMetricFilterNamespace}", "Impressions${EnvironmentType}", { "label": "Impressions", "color": "#1f77b4" } ],
+                  [ "${kMetricFilterNamespace}", "Vanillas${EnvironmentType}", { "label": "Vanillas", "color": "#d62728" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": true,
+                "region": "${AWS::Region}",
+                "stat": "Sum",
+                "period": 300,
+                "title": "Impressions",
+                "yAxis": {
+                  "left": {
+                    "showUnits": false
+                  }
+                }
               }
             }
           ]
