Make log warning alarms more consistent

--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -216,7 +216,7 @@ Resources:
   ArrangerFunctionLoggedWarnAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub WARN [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS (${RootStackName})
+      AlarmName: !Sub WARN [Dovetail-CDN Arranger] Lambda function <${EnvironmentTypeAbbreviation}> LOGGING WARNINGS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Cdn Arranger Lambda function has logged some warnings.
       ComparisonOperator: GreaterThanThreshold
