--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -931,7 +931,7 @@ Resources:
   LogWarnsAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub WARN [Dovetail-Router] Web server <${EnvironmentTypeAbbreviation}> LOGGING WARNS (${RootStackName})
+      AlarmName: !Sub WARN [Dovetail-Router] Web server <${EnvironmentTypeAbbreviation}> LOGGING WARNINGS (${RootStackName})
       AlarmDescription: !Sub ${EnvironmentType} Dovetail Router's Elixir server logging warnings
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
