Improve alarm description

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -932,7 +932,11 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmName: !Sub WARN [Dovetail-Router] Web server <${EnvironmentTypeAbbreviation}> LOGGING WARNINGS (${RootStackName})
-      AlarmDescription: !Sub ${EnvironmentType} Dovetail Router's Elixir server logging warnings
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Dovetail Router's Elixir server has logged warnings,
+        which could be a missing placement, Augury timeout, read-behind, etc.
+        All requests were completed, but may have included unintended or
+        out-of-date arrangements.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: !Sub Warns${EnvironmentType}
@@ -1027,7 +1031,7 @@ Resources:
       LogGroupName: !Ref TaskLogGroup
       RoleArn: !GetAtt SubscriptionFilterRole.Arn
 
-  StackOverviewDashboard:
+  RouterDashboard:
     Type: AWS::CloudWatch::Dashboard
     Properties:
       DashboardBody: !Sub |-
@@ -1201,7 +1205,7 @@ Resources:
             }
           ]
         }
-      DashboardName: !Sub ${RootStackName}-${AWS::Region}-DovetailRouter
+      DashboardName: !Sub ${RootStackName}-${AWS::Region}-Dovetail-Router
 
 Outputs:
   VanityAlbDomain:
