Replace joins with subs

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -844,7 +844,7 @@ Resources:
     Properties:
       MinCapacity: !If [IsProduction, 8, 2]
       MaxCapacity: !If [IsProduction, 16, 4]
-      ResourceId: !Join ["/", ["service", !Ref EcsClusterName, !GetAtt EcsService.Name]]
+      ResourceId: !Sub service/${EcsClusterName}/${EcsService.Name}
       RoleARN: !GetAtt ScalingIamRole.Arn
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
@@ -857,7 +857,7 @@ Resources:
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ALBRequestCountPerTarget
-          ResourceLabel: !Join ["/", [!GetAtt Alb.LoadBalancerFullName, !GetAtt TargetGroup.TargetGroupFullName]]
+          ResourceLabel: !Sub ${Alb.LoadBalancerFullName}/${TargetGroup.TargetGroupFullName}
         ScaleInCooldown: 60
         ScaleOutCooldown: 60
         TargetValue: 600
