Improve custom resource function alarm name uniqueness

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -86,7 +86,7 @@ Resources:
   AmazonSesSmtpCredentialsGeneratorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] SES Cred. Generator <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] SES Cred. Generator <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for generating SES
         SMTP credentials is failing. This could mean that a stack update is
@@ -237,7 +237,7 @@ Resources:
   S3StaticSiteDeployFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] S3 Deploy <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] S3 Deploy <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for static S3
         website deployment is failing. This could mean that a stack update is
@@ -357,7 +357,7 @@ Resources:
   AvailabilityZoneSelectorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] AZ Selector <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] AZ Selector <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for selecting
         availability zones is failing. This could mean that a stack update is
@@ -450,7 +450,7 @@ Resources:
   EchoFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] Echo <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] Echo <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource echo function is failing. This
         could mean that a stack update is stalled, waiting for an HTTP callback
@@ -592,7 +592,7 @@ Resources:
   CloudWatchAlarmTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] Alarm Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] Alarm Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for tagging
         CloudWatch alarms is failing. This could mean that a stack update is
@@ -738,7 +738,7 @@ Resources:
   CloudWatchLogGroupTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] Log Group Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] Log Group Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for tagging
         CloudWatch log groups is failing. This could mean that a stack update
@@ -882,7 +882,7 @@ Resources:
   Ec2ResourceTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] EC2 Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] EC2 Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for tagging
         EC2 resources is failing. This could mean that a stack update is
@@ -983,7 +983,7 @@ Resources:
   HashStringFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub ERROR [Infrastructure] Hash String <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmName: !Sub ERROR [Infrastructure] Hash String <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub |-
         ${EnvironmentType} stack custom resource function for creating hash
         strings is failing. This could mean that a stack update is
