Add alarm for ASG notification function

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -211,7 +211,7 @@ Resources:
         # repository. Some or all of the contents of the repo live under that
         # path.
         # It does not include a trailing slash.
-        # e.g., https://prx-infrastructure-us-east-1-source.s3.amazonaws.com/000e4f9a6b3836efbfc722fe7d2fd598b03edfd4
+        # e.g., https://prx-infrastructure-us-east-1-source.s3.us-east-1.amazonaws.com/000e4f9a6b3836efbfc722fe7d2fd598b03edfd4
         Fn::Sub:
           - https://${SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}
           - SourceBucketName:
@@ -618,6 +618,7 @@ Resources:
         - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -633,6 +634,7 @@ Resources:
         KmsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KmsEndpointAccessSecurityGroupId
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
+        CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
