Add fallback text to ASG notifications

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -415,6 +415,7 @@ Resources:
               icon_emoji: ':ops-autoscaling:',
               attachments: [{
                 color: "#53adfb",
+                fallback: `SCALE${inOut} | ${regions[event.region]} » ASG &lt;${environment}&gt; ${event['detail-type'].toUpperCase()}`,
                 blocks: [
                   {
                     type: "section",
