Fix alarm description

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -475,7 +475,8 @@ Resources:
       AlarmName: !Sub WARN [Infrastructure] ASG Events Notifications <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         The events notification function for the ${EnvironmentType} auto
-        scaling group
+        scaling group has experienced some errors, so notifications may not
+        be getting sent to Slack.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
