--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -65,7 +65,7 @@ Resources:
                 Resource:
                   Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
             Version: "2012-10-17"
-          PolicyName: PorterSnsPublish
+          PolicyName: SlackRelaySnsPublish
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -228,16 +228,20 @@ Resources:
               # Resolve the Dovetail Redis host and check all IPs returned for
               # connectivity. If any can't connect, the instance is marked as
               # unhealthy
-              command: !Sub |-
-                #!/bin/bash
-                for IP in $(getent hosts ${SharedRedisReplicationGroupEndpointAddress} | awk '{ print $1 }')
-                do
-                  if ! timeout 0.1 bash -c "cat < /dev/null > /dev/tcp/$IP/${SharedRedisReplicationGroupEndpointPort}"; then
-                    echo "Unhealthy; Failed to connect to Redis: $IP"
-                    INSTANCE_ID=`ec2-metadata -i | cut -d " " -f 2`
-                    aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy --region ${AWS::Region} --no-should-respect-grace-period
-                  fi
-                done
+              command: !Sub
+                - |-
+                  #!/bin/bash
+                  aws sns publish --topic-arn ${relayTopicArn} --message '{ "channel": "#sandbox2", "text": "test2" }'
+                  for IP in $(getent hosts ${SharedRedisReplicationGroupEndpointAddress} | awk '{ print $1 }')
+                  do
+                    if ! timeout 0.1 bash -c "cat < /dev/null > /dev/tcp/$IP/${SharedRedisReplicationGroupEndpointPort}"; then
+                      echo "Unhealthy; Failed to connect to Redis: $IP"
+                      INSTANCE_ID=`ec2-metadata -i | cut -d " " -f 2`
+                      aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy --region ${AWS::Region} --no-should-respect-grace-period
+                    fi
+                  done
+                - relayTopicArn:
+                    Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
           services:
             sysvinit:
               cfn-hup:
