--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -232,7 +232,7 @@ Resources:
                 - |-
                   #!/bin/bash
                   INSTANCE_ID=`ec2-metadata -i | cut -d " " -f 2`
-                  aws sns publish --region ${region} --topic-arn ${topic} --message '{ "channel": "#{channel}", "username": "AWS Auto Scaling", "icon_emoji": ":ops-autoscaling:", "text": "${text}" }'
+                  aws sns publish --region ${region} --topic-arn ${topic} --message '{ "channel": "${channel}", "username": "AWS Auto Scaling", "icon_emoji": ":ops-autoscaling:", "text": "${text}" }'
                   for IP in $(getent hosts ${SharedRedisReplicationGroupEndpointAddress} | awk '{ print $1 }')
                   do
                     if ! timeout 0.1 bash -c "cat < /dev/null > /dev/tcp/$IP/${SharedRedisReplicationGroupEndpointPort}"; then
