Fix escaped variables

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -621,7 +621,8 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
-        NotificationsStackName: !Ref NotificationsStackName
+        SlackMessageRelaySnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
         CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         KeyPairName: !Ref AsgKeyPairName
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
