--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -21,7 +21,7 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  NotificationsStackName: { Type: String }
+  SlackMessageRelaySnsTopicArn: { Type: String }
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   KeyPairName: { Type: AWS::EC2::KeyPair::KeyName }
   VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
@@ -62,8 +62,7 @@ Resources:
             Statement:
               - Action: sns:Publish
                 Effect: Allow
-                Resource:
-                  Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+                Resource: !Ref SlackMessageRelaySnsTopicArn
             Version: "2012-10-17"
           PolicyName: SlackRelaySnsPublish
       Tags:
@@ -243,16 +242,10 @@ Resources:
                   done
                 - channel: "#sandbox2"
                   text: !Sub >-
-                    EC2 instance `$INSTANCE_ID` could not connect to `${SharedRedisReplicationGroupEndpointAddress}` at
-                    DOLLAR_ip, and is being marked as *unhealthy* in its auto scaling group.
-                  topic:
-                    Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
-                  region: # Extracts the region part of the SNS topic ARN
-                    Fn::Select:
-                      - 3
-                      - Fn::Split:
-                          - ":"
-                          - Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+                    EC2 instance `'"$INSTANCE_ID"'` could not connect to `${SharedRedisReplicationGroupEndpointAddress}`
+                    at '"DOLLAR_ip"', and is being marked as *unhealthy* in its auto scaling group.
+                  topic: !Ref SlackMessageRelaySnsTopicArn
+                  region: !Select [3, !Split [":", !Ref SlackMessageRelaySnsTopicArn]]
           services:
             sysvinit:
               cfn-hup:
@@ -358,8 +351,7 @@ Resources:
         Handles auto scaling events from the ${EnvironmentType} shared ASG
       Environment:
         Variables:
-          SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+          SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelaySnsTopicArn
       Events:
         AsgEventsRule:
           # https://docs.aws.amazon.com/autoscaling/ec2/userguide/cloud-watch-events.html
@@ -462,8 +454,7 @@ Resources:
         - Statement:
             - Action: sns:Publish
               Effect: Allow
-              Resource:
-                Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+              Resource: !Ref SlackMessageRelaySnsTopicArn
           Version: "2012-10-17"
       Runtime: nodejs12.x
       Tags:
