Break after first failed check

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -247,6 +247,8 @@ Resources:
                         --health-status Unhealthy \
                         --region ${AWS::Region} \
                         --no-should-respect-grace-period
+
+                      break
                     fi
                   done
                 - channel: "#ops-warn"
