--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -243,7 +243,7 @@ Resources:
                         --message '{ "channel": "${channel}", "username": "AWS Auto Scaling", "icon_emoji": ":ops-autoscaling:", "text": "${text}" }'
 
                       aws autoscaling set-instance-health \
-                        --instance-id $INSTANCE_ID \
+                        --instance-id "$INSTANCE_ID" \
                         --health-status Unhealthy \
                         --region ${AWS::Region} \
                         --no-should-respect-grace-period
@@ -259,7 +259,7 @@ Resources:
                   # `some value`
                   text: !Sub >-
                     EC2 instance `'"$INSTANCE_ID"'` could not connect to `${SharedRedisReplicationGroupEndpointAddress}`
-                    at `'"$IP"'`, and is being marked as *unhealthy* in its auto scaling group.
+                    at `'"$IP"'`. It will be marked as *unhealthy* in its auto scaling group and get replaced.
                   topic: !Ref SlackMessageRelaySnsTopicArn
                   region: !Select [3, !Split [":", !Ref SlackMessageRelaySnsTopicArn]]
           services:
